syntax = "proto3";

package elude.proto;

option go_package = "./;gen";

import "proto/location/location_request.proto";
import "proto/location/location_response.proto";

service LocationController {

  // City controller
  rpc GetCity(GetCityRequest) returns (CityResponse){} // GetCity method is used to get city by id from database from database.

  rpc GetCities(GetCitiesRequest) returns (CitiesResponse){} // GetCities method is used to get all cities from cache or database.

  rpc CreateCity(CreateCityRequest) returns (CityResponse){} // CreateCity method is used to create a new city.

  rpc UpdateCity(UpdateCityRequest) returns (CityResponse){} // UpdateCity method is used to update an existing city.

  rpc DeleteCity(DeleteCityRequest) returns (CityResponse){} // DeleteCity method is used to delete an existing city.

  rpc GetCityWithWeather(GetCityRequest) returns (CityResponse){} // GetCityWithWeather method is used to get city with weather by id from database.

  rpc GetDepartureCities(GetCitiesRequest) returns (CitiesResponse){} // GetDepartureCities method is used to get all departure cities from cache or database.

  rpc GetLocations(GetLocationsRequest) returns (LocationsResponse){} // GetLocations method is used to get all city or airport locations from database.

  rpc GetNearestConnectedCity(GetCityRequest) returns (CityResponse) {} // GetNearestConnectedCity is method is currently not supported, use GetNearestLocation.

  rpc GetNearestConnectedCityByCoordinates(GetCityByCoordinatesRequest) returns (CityResponse) {} // GetNearestConnectedCityByCoordinates method is currently not supported, use GetNearestLocationByCoordinates.

  rpc GetNearestLocation(GetLocationRequest) returns (LocationResponse) {}; // GetNearestLocation method is used to get the nearest location for provided airport.

  rpc GetNearestLocationByCoordinates(GetLocationByCoordinatesRequest) returns (LocationResponse) {}; // GetNearestLocationByCoordinates method is used to get nearest connected city by coordinates.

  rpc GetMultipleCities(GetMultipleCitiesRequest) returns (CitiesResponse){} // GetMultipleCities method is used to get multiple cities by iata codes from database.

  rpc GetMultipleCitiesWithWeather(GetMultipleCitiesRequest) returns (CitiesResponse){} // GetMultipleCitiesWithWeather  method is used to get multiple cities by iata codes with weather.

  rpc UpdateCityWithImage(stream UpdateCityWithImageRequest) returns (CityResponse){} // UpdateCityWithImage method is currently not supported. Use UpdateCityWithImageUnary instead.

  rpc GetWeatherByCoordinates(GetWeatherByCoordinatesRequest) returns (GetWeatherByCoordinatesResponse){} // GetWeatherByCoordinates method is used to get weather by coordinates.

  rpc GetSearchLocations(GetSearchLocationsRequest) returns (GetSearchLocationsResponse){} // GetCity method is used to get city by id from database from database.

  // Featured location controller
  rpc GetFeaturedLocationsByLocation(GetFeaturedLocationsByLocationRequest) returns (FeaturedLocationsResponse){} // GetFeaturedLocationsByLocation method is used to get featured location by city id.

  rpc GetFeaturedLocationsByCoordinates(GetFeaturedLocationsByCoordinatesRequest) returns (FeaturedLocationsResponse){} // GetFeaturedLocationsByCoordinates method is used to get featured location by coordinates.

  // Airport controller
  rpc GetAirport(GetAirportRequest) returns (AirportResponse){} // GetAirport method is used to get airport by id from database.

  rpc GetAirports(GetAirportsRequest) returns (AirportsResponse){} // GetAirports method is used to get all airports from cache or database.

  rpc CreateAirport(CreateAirportRequest) returns (AirportResponse){} // CreateAirport method is used to create a new airport.

  rpc UpdateAirport(UpdateAirportRequest) returns (AirportResponse){} // UpdateAirport method is used to update an existing airport.

  rpc DeleteAirport(DeleteAirportRequest) returns (AirportResponse){} // DeleteAirport method is used to delete an existing airport.

  rpc GetMultipleAirports(GetMultipleAirportsRequest) returns (AirportsResponse){} // GetMultipleAirports method is used to get multiple airports by iata codes from database.

  // Airlines controller
  rpc GetAirline(GetAirlineRequest) returns (AirlineResponse){} // GetAirline method is used to get airline by id from database.

  rpc GetAirlines(GetAirlinesRequest) returns (AirlinesResponse){} // GetAirlines method is used to get all airlines from cache or database.

  rpc CreateAirline(CreateAirlineRequest) returns (AirlineResponse){} // CreateAirline method is used to create a new airline.

  rpc UpdateAirline(UpdateAirlineRequest) returns (AirlineResponse){} // UpdateAirline method is used to update an existing airline.

  rpc DeleteAirline(DeleteAirlineRequest) returns (AirlineResponse){} // DeleteAirline method is used to delete an existing airline.

  rpc GetMultipleAirlines(GetMultipleAirlinesRequest) returns (AirlinesResponse){} // GetMultipleAirlines method is used to get multiple airlines by iata codes from database.

  rpc UpdateAirlineWithImage(stream UpdateAirlineWithImageRequest) returns (AirlineResponse){} // UpdateAirlineWithImage method is currently not supported. Use UpdateAirlineWithImageUnary instead.


  rpc GetAverageCost(GetAverageCostRequest) returns (GetAverageCostResponse){} // Currently not used.

  rpc GetAffordableDestinations(GetAffordableDestinationsRequest) returns (GetAffordableDestinationsResponse){} // Currently not used.

  rpc GetTopDestinations(GetTopDestinationsRequest) returns (GetTopDestinationsResponse){} // Currently not used.

  rpc GetDestinationCities(GetDestinationCitiesRequest) returns (GetDestinationCitiesResponse){} // Currently not used.

  // Country controller

  rpc GetCountry(GetCountryRequest) returns (CountryResponse){} // GetCountry method is used to get country by id from database.

  rpc GetCountries(GetCountriesRequest) returns (CountriesResponse){} // GetCountries method is used to get all countries from cache or database.

  rpc CreateCountry(CreateCountryRequest) returns (CountryResponse){} // CreateCountry method is used to create a new country.

  rpc UpdateCountry(UpdateCountryRequest) returns (CountryResponse){} // UpdateCountry method is used to update an existing country.

  rpc DeleteCountry(DeleteCountryRequest) returns (CountryResponse){} // DeleteCountry method is used to delete an existing country.

  rpc GetMultipleCountries(GetMultipleCountriesRequest) returns (CountriesResponse){} // GetMultipleCountries method is used to get multiple countries by iso codes from database.

  // Region controller

  rpc GetRegion(GetRegionRequest) returns (RegionResponse){} // GetRegion method is used to get a region by region id from database.

  rpc GetRegions(GetRegionsRequest) returns (RegionsResponse){} // GetRegions method is used to get all regions from database.

  rpc CreateRegion(CreateRegionRequest) returns (RegionResponse){} // CreateRegion method is used to create a new region.

  rpc UpdateRegion(UpdateRegionRequest) returns (RegionResponse){} // UpdateRegion method is used to update an existing region.

  rpc DeleteRegion(DeleteRegionRequest) returns (RegionResponse){} // DeleteRegion method is used to delete an existing region.

  rpc GetLocationsByIdentifiers(GetLocationsByIdentifiersRequest) returns (GetLocationsByIdentifiersResponse){} // GetLocationsByIdentifiers method is used to get all database entities corresponding to provided locations.


  // Preference controller

  rpc GetPreferences(GetPreferencesRequest) returns (GetPreferencesResponse){} // GetPreferences method is used to get all preferences from database and current user preferences.

  rpc UpdateUserPreferences(UpdateUserPreferencesRequest) returns (UpdateUserPreferencesResponse){} // UpdateUserPreferences method is used to update user preferences.

  rpc GetRecommendedCities(GetRecommendedCitiesRequest) returns (GetRecommendedCitiesResponse){} // GetRecommendedCities method is used to get recommended cities by user preferences.
}